--- a/Lab1_VadymHurnik/Lab1_VadymHurnik.vcxproj
+++ b/Lab1_VadymHurnik/Lab1_VadymHurnik.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{af8c8577-e54b-4673-b8fd-0b27a616e73e}</ProjectGuid>
     <RootNamespace>Lab1VadymHurnik</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Task1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lab1_VadymHurnik.cpp" />
+    <ClCompile Include="Task1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
